--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.5-browsers
 
-    working_directory: ~/behave_web
+    working_directory: ~/Top-Automation
 
     steps:
       - checkout
@@ -40,5 +40,5 @@ jobs:
             . venv/bin/activate
             behave
       - store_artifacts:
-          path: scenario_result
-destination: scenario_result
+          path: artifacts
+destination: artifacts
