--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ jobs:
             behave -f allure_behave.formatter:AllureFormatter -o ./result ./features
       - run:
           name: generate allure
-	        command: |
-            allure generate ./result
+	      command: allure generate ./result
       - store_artifacts:
           path: artifacts
       - store_artifacts:
