--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,10 @@ jobs:
           name: generate test result
           command: |
             . venv/bin/activate
-            allure generate ./result
+            sudo apt-add-repository ppa:qameta/allure
+            sudo apt-get update
+            sudo apt-get install allure
+            allure generat ./result
       - store_artifacts:
           path: artifacts
       - store_artifacts:
