--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: install allure
           command: |
-            sudo apt-get install software-properties-common python-software-properties
+            sudo apt-get install software-properties-common
             sudo apt-add-repository ppa:qameta/allure
             sudo apt-get update
             sudo apt-get install allure
