--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             sudo apt-get install software-properties-common
             sudo apt-add-repository ppa:qameta/allure
             sudo apt-get update
-            sudo apt-get install allure -y
+            sudo apt-get install -yq allure
 
       # run tests!
       - run:
