--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,13 +32,6 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-      - run:
-          name: install allure
-          command: |
-            sudo apt-get install -y software-properties-common
-            sudo apt-add-repository -y ppa:qameta/allure
-            sudo apt-get update
-            sudo apt-get install -y allure
 
       # run tests!
       - run:
@@ -49,7 +42,7 @@ jobs:
       - run:
           name: generate test result
           command: |
-            allure generate ./result
+            docker run -v "${BUILD_DIR}/result:/allure" cashongo/allure-report-generator
       - store_artifacts:
           path: artifacts
       - store_artifacts:
