--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,10 @@ jobs:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.5-browsers
+    docker:
+      # specify the version you desire here
+      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
+      - image: cashongo/allure-report-generator
 
     working_directory: ~/Top-Automation
 
@@ -39,10 +43,13 @@ jobs:
           command: |
             . venv/bin/activate
             behave -f allure_behave.formatter:AllureFormatter -o ./result ./features
+
       - run:
           name: generate test result
           command: |
+            . venv/bin/activate
             docker run -v "${BUILD_DIR}/result:/allure" cashongo/allure-report-generator
+
       - store_artifacts:
           path: artifacts
       - store_artifacts:
