--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,6 @@ jobs:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.5-browsers
-      - image: cashongo/allure-report-generator
 
     working_directory: ~/Top-Automation
 
@@ -40,11 +39,8 @@ jobs:
           command: |
             . venv/bin/activate
             behave -f allure_behave.formatter:AllureFormatter -o ./result ./features
+            docker run -v "./result:/allure-report" cashongo/allure-report-generator
 
-    docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: cashongo/allure-report-generator
 
       - store_artifacts:
           path: artifacts
