--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
 
       - run:
           name: generate allure
-          command: docker run -v "./result:/allure-report" cashongo/allure-report-generator
+          command: allure generate ./result
           when: always
 
       - store_artifacts:
