--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,12 @@ jobs:
 
       - run:
           name: generate allure
-          command: |
-            sudo docker pull cashongo/allure-report-generator
-            sudo docker run -v "./result:/allure-report" cashongo/allure-report-generator
+          command: sudo docker pull cashongo/allure-report-generator
+          when: always
+
+      - run:
+          name: generate allure
+          command: sudo docker run -v "./result:/allure-report" cashongo/allure-report-generator
           when: always
 
       - store_artifacts:
