--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,15 +33,13 @@ jobs:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
+      - setup_remote_docker
       # run tests!
       - run:
           name: run tests
           command: |
             . venv/bin/activate
             behave -f allure_behave.formatter:AllureFormatter -o ./result ./features
-
-      - setup_remote_docker:
-          when: always
 
       - run:
           name: generate allure
