--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            behave -f allure_behave.formatter:AllureFormatter -o ./result ./features
+            behave -f allure_behave.formatter:AllureFormatter -o ./allure ./features
 
       - run:
           name: generate allure
@@ -51,9 +51,7 @@ jobs:
       - store_artifacts:
           path: artifacts
       - store_artifacts:
-          path: result
-      - store_artifacts:
           path: allure
+
 destination: artifacts
-destination: result
 destination: allure
